# gitm

./: README.md  pyproject.toml
.github/workflows/: publish.yml
.run/: Publish.run.xml
ai/: create_data_model.py  data.json  fetch_fastapi_commits.py  main.py  req.txt
gitm/: __init__.py  __main__.py  connection.py  db.py  pattern.py
